Hopeful fix: For some reason Chrome appears to be adding a margin tag to body that's shifting things left.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   max-width: 45em;
   vertical-align: middle;
-  margin: auto;
+  margin: 0 auto;
   padding: 2em;
 }
 
